// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShippingReviewSection component should renders correctly props are present 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(TitlePlusEditButton)
      dataLocator="shipping-section"
    />
  </Styled(View)>
  <Styled(View)>
    <View>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          color="gray.900"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          textDecoration={null}
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          color="gray.900"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          textDecoration={null}
        />
      </Styled(View)>
    </View>
    <View>
      <ShippingMethodDisplay
        displayName=""
        labels={
          Object {
            "lbl_review_sectionShippingMethodTitle": "title",
          }
        }
      />
    </View>
  </Styled(View)>
</Fragment>
`;

exports[`ShippingReviewSection component should renders correctly props not present 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(TitlePlusEditButton)
      dataLocator="shipping-section"
    />
  </Styled(View)>
  <Styled(View)>
    <View>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          color="gray.900"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          textDecoration={null}
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          color="gray.900"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          textDecoration={null}
        />
      </Styled(View)>
    </View>
    <View />
  </Styled(View)>
</Fragment>
`;
